--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -22,7 +22,7 @@
     "gantt-task-react": "^0.3.9",
     "lodash": "^4.17.21",
     "lucide-react": "^0.487.0",
-    "next": "15.3.0",
+    "next": "14.2.5",
     "numeral": "^2.0.6",
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
